# krall

./: CMakeLists.txt  README.md
cmake/: FindAllocators.cmake  FindCharacters.cmake
src/: CMakeLists.txt  character_sheet.c  comparison.c  game.c  main.c  party.c  rng.c
src/gui/notcurses/: tui.c
src/gui/notcurses/include/: tui.h
src/include/krall/: character_sheet.h  comparison.h  rng.h
src/include/krall/gameplay/: game.h  party.h
